Bug #7346: Disable Composite extension in Xprt

Xorg Bug #7346 <https://bugs.freedesktop.org/show_bug.cgi?id=7346>
Patch #6184 <https://bugs.freedesktop.org/attachment.cgi?id=6184>